// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EntityGenerator > generate entities from schema [mssql] > mssql-entity-dump 1`] = `
[
  "import { PrimaryKeyProp, type Ref, defineEntity, p } from '@mikro-orm/core';
import { Author2 } from './Author2';

export class Address2 {
  [PrimaryKeyProp]?: 'author';
  author!: Ref<Author2>;
  value!: string;
}

export const Address2Schema = defineEntity({
  class: Address2,
  comment: 'This is address table',
  properties: {
    author: () => p.oneToOne(Author2).primary().ref().updateRule('cascade').deleteRule('cascade'),
    value: p.string().comment('This is address property'),
  },
});
",
  "import { Collection, type Opt, type Ref, defineEntity, p } from '@mikro-orm/core';
import { Address2 } from './Address2';
import { Book2 } from './Book2';

export class Author2 {
  id!: number;
  createdAt!: Date & Opt;
  updatedAt!: Date & Opt;
  name!: string;
  email!: string;
  age?: number;
  termsAccepted: boolean & Opt = false;
  optional?: boolean;
  identities?: string;
  born?: string;
  bornTime?: string;
  favouriteBook?: Ref<Book2>;
  favouriteAuthor?: Ref<Author2>;
  authorToFriend = new Collection<Author2>(this);
  following = new Collection<Author2>(this);
  address2?: Ref<Address2>;
  author2Collection = new Collection<Author2>(this);
  authorToFriendInverse = new Collection<Author2>(this);
  followingInverse = new Collection<Author2>(this);
  book2Collection = new Collection<Book2>(this);
}

export const Author2Schema = defineEntity({
  class: Author2,
  indexes: [{ name: 'author2_name_age_index', properties: ['name', 'age'] }],
  uniques: [{ name: 'author2_name_email_unique', properties: ['name', 'email'] }],
  properties: {
    id: p.integer().primary(),
    createdAt: p.datetime().length(3).defaultRaw(\`current_timestamp\`),
    updatedAt: p.datetime().length(3).defaultRaw(\`current_timestamp\`),
    name: p.string().index('custom_idx_name_123'),
    email: p.string().index('custom_email_index_name').unique('custom_email_unique_name'),
    age: p.integer().nullable(),
    termsAccepted: p.boolean().defaultRaw(\`0\`).index('author2_terms_accepted_index'),
    optional: p.boolean().nullable(),
    identities: p.text().nullable(),
    born: p.date().nullable().index('author2_born_index'),
    bornTime: p.time().nullable().index('born_time_idx'),
    favouriteBook: () => p.manyToOne(Book2).ref().deleteRule('cascade').nullable(),
    favouriteAuthor: () => p.manyToOne(Author2).ref().nullable(),
    authorToFriend: () => p.manyToMany(Author2).pivotTable('author_to_friend').joinColumn('author2_1_id').inverseJoinColumn('author2_2_id'),
    following: () => p.manyToMany(Author2).joinColumn('author2_1_id').inverseJoinColumn('author2_2_id'),
    address2: () => p.oneToOne(Address2).ref().mappedBy('author'),
    author2Collection: () => p.oneToMany(Author2).mappedBy('favouriteAuthor'),
    authorToFriendInverse: () => p.manyToMany(Author2).mappedBy('authorToFriend'),
    followingInverse: () => p.manyToMany(Author2).mappedBy('following'),
    book2Collection: () => p.oneToMany(Book2).mappedBy('author'),
  },
});
",
  "import { Collection, type Ref, defineEntity, p } from '@mikro-orm/core';

export class BaseUser2 {
  id!: number;
  firstName!: string;
  lastName!: string;
  type!: TBaseUser2Type;
  ownerProp?: string;
  favouriteEmployee?: Ref<BaseUser2>;
  favouriteManager?: Ref<BaseUser2>;
  employeeProp?: number;
  managerProp?: string;
  baseUser2Collection = new Collection<BaseUser2>(this);
  baseUser2?: Ref<BaseUser2>;
}

export const BaseUser2Type = {
  EMPLOYEE: 'employee',
  MANAGER: 'manager',
  OWNER: 'owner',
} as const;

export type TBaseUser2Type = (typeof BaseUser2Type)[keyof typeof BaseUser2Type];

export const BaseUser2Schema = defineEntity({
  class: BaseUser2,
  uniques: [
    {
      name: 'base_user2_favourite_manager_id_unique',
      expression: 'create unique index [base_user2_favourite_manager_id_unique] on [base_user2] (where ([favourite_manager_id] IS NOT NULL))',
      properties: ['favouriteManager'],
    },
  ],
  properties: {
    id: p.integer().primary(),
    firstName: p.string().length(100),
    lastName: p.string().length(100),
    type: p.enum(() => BaseUser2Type).index('base_user2_type_index'),
    ownerProp: p.string().nullable(),
    favouriteEmployee: () => p.manyToOne(BaseUser2).ref().nullable(),
    favouriteManager: () => p.oneToOne(BaseUser2).ref().nullable(),
    employeeProp: p.integer().nullable(),
    managerProp: p.string().nullable(),
    baseUser2Collection: () => p.oneToMany(BaseUser2).mappedBy('favouriteEmployee'),
    baseUser2: () => p.oneToOne(BaseUser2).ref().mappedBy('favouriteManager'),
  },
});
",
  "import { Collection, defineEntity, p } from '@mikro-orm/core';
import { Book2 } from './Book2';
import { Book2Tags } from './Book2Tags';

export class BookTag2 {
  id!: bigint;
  name!: string;
  bookToTagUnorderedInverse = new Collection<Book2>(this);
  book2TagsCollection = new Collection<Book2Tags>(this);
}

export const BookTag2Schema = defineEntity({
  class: BookTag2,
  properties: {
    id: p.bigint().primary(),
    name: p.string().length(50),
    bookToTagUnorderedInverse: () => p.manyToMany(Book2).mappedBy('bookToTagUnordered'),
    book2TagsCollection: () => p.oneToMany(Book2Tags).mappedBy('bookTag2'),
  },
});
",
  "import { Collection, type Opt, PrimaryKeyProp, type Ref, defineEntity, p } from '@mikro-orm/core';
import { Author2 } from './Author2';
import { Book2Tags } from './Book2Tags';
import { BookTag2 } from './BookTag2';
import { Publisher2 } from './Publisher2';
import { Test2 } from './Test2';

export class Book2 {
  [PrimaryKeyProp]?: 'uuidPk';
  uuidPk!: string;
  createdAt!: Date & Opt;
  isbn?: string;
  title?: string = '';
  perex?: string;
  price?: string;
  float?: number;
  float36?: number;
  double?: number;
  meta?: string;
  author!: Ref<Author2>;
  publisher?: Ref<Publisher2>;
  bookToTagUnordered = new Collection<BookTag2>(this);
  author2Collection = new Collection<Author2>(this);
  book2TagsCollection = new Collection<Book2Tags>(this);
  test2?: Ref<Test2>;
}

export const Book2Schema = defineEntity({
  class: Book2,
  uniques: [
    {
      name: 'book2_isbn_unique',
      expression: 'create unique index [book2_isbn_unique] on [book2] (where ([isbn] IS NOT NULL))',
      properties: ['isbn'],
    },
  ],
  properties: {
    uuidPk: p.uuid().primary(),
    createdAt: p.datetime().length(3).defaultRaw(\`current_timestamp\`),
    isbn: p.character().length(13).nullable().unique('book2_isbn_unique'),
    title: p.string().nullable(),
    perex: p.text().nullable(),
    price: p.decimal().precision(8).scale(2).nullable(),
    float: p.float().nullable(),
    float36: p.double().nullable(),
    double: p.double().nullable(),
    meta: p.string().length(-1).nullable(),
    author: () => p.manyToOne(Author2).ref(),
    publisher: () => p.manyToOne(Publisher2).ref().updateRule('cascade').deleteRule('cascade').nullable(),
    bookToTagUnordered: () => p.manyToMany(BookTag2).pivotTable('book_to_tag_unordered').joinColumn('book2_uuid_pk').inverseJoinColumn('book_tag2_id'),
    author2Collection: () => p.oneToMany(Author2).mappedBy('favouriteBook'),
    book2TagsCollection: () => p.oneToMany(Book2Tags).mappedBy('book2'),
    test2: () => p.oneToOne(Test2).ref().mappedBy('book'),
  },
});
",
  "import { PrimaryKeyProp, type Ref, defineEntity, p } from '@mikro-orm/core';
import { Book2 } from './Book2';
import { BookTag2 } from './BookTag2';

export class Book2Tags {
  [PrimaryKeyProp]?: 'order';
  order!: number;
  book2!: Ref<Book2>;
  bookTag2!: Ref<BookTag2>;
}

export const Book2TagsSchema = defineEntity({
  class: Book2Tags,
  tableName: 'book2_tags',
  properties: {
    order: p.integer().primary(),
    book2: () => p.manyToOne(Book2).ref().updateRule('cascade').deleteRule('cascade'),
    bookTag2: () => p.manyToOne(BookTag2).ref().updateRule('cascade').deleteRule('cascade'),
  },
});
",
  "import { type Ref, defineEntity, p } from '@mikro-orm/core';
import { Car2 } from './Car2';

export class CarOwner2 {
  id!: number;
  name!: string;
  car!: Ref<Car2>;
}

export const CarOwner2Schema = defineEntity({
  class: CarOwner2,
  properties: {
    id: p.integer().primary(),
    name: p.string(),
    car: () => p.manyToOne(Car2).ref().updateRule('cascade').index(true),
  },
});
",
  "import { Collection, PrimaryKeyProp, type Ref, defineEntity, p } from '@mikro-orm/core';
import { CarOwner2 } from './CarOwner2';
import { User2 } from './User2';

export class Car2 {
  [PrimaryKeyProp]?: ['name', 'year'];
  name!: string;
  year!: number;
  price!: number;
  carOwner2Collection = new Collection<CarOwner2>(this);
  user2?: Ref<User2>;
  carsInverse = new Collection<User2>(this);
}

export const Car2Schema = defineEntity({
  class: Car2,
  properties: {
    name: p.string().primary().length(100).index('car2_name_index'),
    year: p.integer().primary().index('car2_year_index'),
    price: p.integer(),
    carOwner2Collection: () => p.oneToMany(CarOwner2).mappedBy('car'),
    user2: () => p.oneToOne(User2).ref().mappedBy('favouriteCar'),
    carsInverse: () => p.manyToMany(User2).mappedBy('cars'),
  },
});
",
  "import { PrimaryKeyProp, type Ref, defineEntity, p } from '@mikro-orm/core';
import { Test2 } from './Test2';

export class Configuration2 {
  [PrimaryKeyProp]?: ['property', 'test'];
  property!: string;
  test!: Ref<Test2>;
  value!: string;
}

export const Configuration2Schema = defineEntity({
  class: Configuration2,
  properties: {
    property: p.string().primary(),
    test: () => p.manyToOne(Test2).primary().ref().updateRule('cascade'),
    value: p.string(),
  },
});
",
  "import { defineEntity, p } from '@mikro-orm/core';

export class Dummy2 {
  id!: number;
}

export const Dummy2Schema = defineEntity({
  class: Dummy2,
  properties: {
    id: p.integer().primary(),
  },
});
",
  "import { Collection, type Opt, type Ref, defineEntity, p } from '@mikro-orm/core';
import { FooBaz2 } from './FooBaz2';
import { FooParam2 } from './FooParam2';

export class FooBar2 {
  id!: number;
  name!: string;
  baz?: Ref<FooBaz2>;
  fooBar?: Ref<FooBar2>;
  version!: Date & Opt;
  blob?: Buffer;
  array?: string;
  object?: string;
  fooBar2?: Ref<FooBar2>;
  fooParam2Collection = new Collection<FooParam2>(this);
}

export const FooBar2Schema = defineEntity({
  class: FooBar2,
  uniques: [
    {
      name: 'foo_bar2_baz_id_unique',
      expression: 'create unique index [foo_bar2_baz_id_unique] on [foo_bar2] (where ([baz_id] IS NOT NULL))',
      properties: ['baz'],
    },
    {
      name: 'foo_bar2_foo_bar_id_unique',
      expression: 'create unique index [foo_bar2_foo_bar_id_unique] on [foo_bar2] (where ([foo_bar_id] IS NOT NULL))',
      properties: ['fooBar'],
    },
  ],
  properties: {
    id: p.integer().primary(),
    name: p.string(),
    baz: () => p.oneToOne(FooBaz2).ref().updateRule('cascade').deleteRule('set null').nullable(),
    fooBar: () => p.oneToOne(FooBar2).ref().nullable(),
    version: p.datetime().length(0).defaultRaw(\`current_timestamp\`),
    blob: p.blob().length(-1).nullable(),
    array: p.text().nullable(),
    object: p.string().length(-1).nullable(),
    fooBar2: () => p.oneToOne(FooBar2).ref().mappedBy('fooBar'),
    fooParam2Collection: () => p.oneToMany(FooParam2).mappedBy('bar'),
  },
});
",
  "import { Collection, type Opt, type Ref, defineEntity, p } from '@mikro-orm/core';
import { FooBar2 } from './FooBar2';
import { FooParam2 } from './FooParam2';

export class FooBaz2 {
  id!: number;
  name!: string;
  code!: string;
  version!: Date & Opt;
  fooBar2?: Ref<FooBar2>;
  fooParam2Collection = new Collection<FooParam2>(this);
}

export const FooBaz2Schema = defineEntity({
  class: FooBaz2,
  properties: {
    id: p.integer().primary(),
    name: p.string(),
    code: p.string().columnType('varchar(255)'),
    version: p.datetime().length(3).defaultRaw(\`current_timestamp\`),
    fooBar2: () => p.oneToOne(FooBar2).ref().mappedBy('baz'),
    fooParam2Collection: () => p.oneToMany(FooParam2).mappedBy('baz'),
  },
});
",
  "import { PrimaryKeyProp, type Ref, defineEntity, p } from '@mikro-orm/core';
import { FooBar2 } from './FooBar2';
import { FooBaz2 } from './FooBaz2';

export class FooParam2 {
  [PrimaryKeyProp]?: ['bar', 'baz'];
  bar!: Ref<FooBar2>;
  baz!: Ref<FooBaz2>;
  value!: string;
}

export const FooParam2Schema = defineEntity({
  class: FooParam2,
  properties: {
    bar: () => p.manyToOne(FooBar2).primary().ref().updateRule('cascade'),
    baz: () => p.manyToOne(FooBaz2).primary().ref(),
    value: p.string(),
  },
});
",
  "import { Collection, type Opt, defineEntity, p } from '@mikro-orm/core';
import { Book2 } from './Book2';
import { Publisher2Tests } from './Publisher2Tests';

export class Publisher2 {
  id!: number;
  name: string & Opt = 'asd';
  type: TPublisher2Type & Opt = Publisher2Type.LOCAL;
  type2: TPublisher2Type2 & Opt = Publisher2Type2.LOCAL;
  enum1?: number;
  enum2?: number;
  enum3?: number;
  enum4?: TPublisher2Enum4;
  book2Collection = new Collection<Book2>(this);
  publisher2TestsCollection = new Collection<Publisher2Tests>(this);
}

export const Publisher2Type = {
  LOCAL: 'local',
  GLOBAL: 'global',
} as const;

export type TPublisher2Type = (typeof Publisher2Type)[keyof typeof Publisher2Type];

export const Publisher2Type2 = {
  LOCAL: 'LOCAL',
  GLOBAL: 'GLOBAL',
} as const;

export type TPublisher2Type2 = (typeof Publisher2Type2)[keyof typeof Publisher2Type2];

export const Publisher2Enum4 = {
  A: 'a',
  B: 'b',
  C: 'c',
} as const;

export type TPublisher2Enum4 = (typeof Publisher2Enum4)[keyof typeof Publisher2Enum4];

export const Publisher2Schema = defineEntity({
  class: Publisher2,
  properties: {
    id: p.integer().primary(),
    name: p.string(),
    type: p.enum(() => Publisher2Type),
    type2: p.enum(() => Publisher2Type2),
    enum1: p.tinyint().nullable(),
    enum2: p.tinyint().nullable(),
    enum3: p.tinyint().nullable(),
    enum4: p.enum(() => Publisher2Enum4).nullable(),
    book2Collection: () => p.oneToMany(Book2).mappedBy('publisher'),
    publisher2TestsCollection: () => p.oneToMany(Publisher2Tests).mappedBy('publisher2'),
  },
});
",
  "import { type Ref, defineEntity, p } from '@mikro-orm/core';
import { Publisher2 } from './Publisher2';
import { Test2 } from './Test2';

export class Publisher2Tests {
  id!: number;
  publisher2!: Ref<Publisher2>;
  test2!: Ref<Test2>;
}

export const Publisher2TestsSchema = defineEntity({
  class: Publisher2Tests,
  tableName: 'publisher2_tests',
  properties: {
    id: p.integer().primary(),
    publisher2: () => p.manyToOne(Publisher2).ref().updateRule('cascade').deleteRule('cascade'),
    test2: () => p.manyToOne(Test2).ref().updateRule('cascade').deleteRule('cascade'),
  },
});
",
  "import { Collection, defineEntity, p } from '@mikro-orm/core';
import { User2 } from './User2';

export class Sandwich {
  id!: number;
  name!: string;
  price!: number;
  sandwichesInverse = new Collection<User2>(this);
}

export const SandwichSchema = defineEntity({
  class: Sandwich,
  properties: {
    id: p.integer().primary(),
    name: p.string(),
    price: p.integer(),
    sandwichesInverse: () => p.manyToMany(User2).mappedBy('sandwiches'),
  },
});
",
  "import { Collection, type Opt, type Ref, defineEntity, p } from '@mikro-orm/core';
import { Book2 } from './Book2';
import { Configuration2 } from './Configuration2';
import { Publisher2Tests } from './Publisher2Tests';

export class Test2 {
  id!: number;
  name?: string;
  book?: Ref<Book2>;
  version: number & Opt = 1;
  configuration2Collection = new Collection<Configuration2>(this);
  publisher2TestsCollection = new Collection<Publisher2Tests>(this);
}

export const Test2Schema = defineEntity({
  class: Test2,
  uniques: [
    {
      name: 'test2_book_uuid_pk_unique',
      expression: 'create unique index [test2_book_uuid_pk_unique] on [test2] (where ([book_uuid_pk] IS NOT NULL))',
      properties: ['book'],
    },
  ],
  properties: {
    id: p.integer().primary(),
    name: p.string().nullable(),
    book: () => p.oneToOne(Book2).ref().nullable(),
    version: p.integer(),
    configuration2Collection: () => p.oneToMany(Configuration2).mappedBy('test'),
    publisher2TestsCollection: () => p.oneToMany(Publisher2Tests).mappedBy('test2'),
  },
});
",
  "import { Collection, PrimaryKeyProp, type Ref, defineEntity, p } from '@mikro-orm/core';
import { Car2 } from './Car2';
import { Sandwich } from './Sandwich';

export class User2 {
  [PrimaryKeyProp]?: ['firstName', 'lastName'];
  firstName!: string;
  lastName!: string;
  foo?: number;
  favouriteCar?: Ref<Car2>;
  cars = new Collection<Car2>(this);
  sandwiches = new Collection<Sandwich>(this);
}

export const User2Schema = defineEntity({
  class: User2,
  uniques: [
    {
      name: 'user2_favourite_car_name_favourite_car_year_unique',
      expression: 'create unique index [user2_favourite_car_name_favourite_car_year_unique] on [user2] (where ([favourite_car_name] IS NOT NULL AND [favourite_car_year] IS NOT NULL))',
      properties: ['favouriteCarName'],
    },
  ],
  properties: {
    firstName: p.string().primary().length(100),
    lastName: p.string().primary().length(100),
    foo: p.integer().nullable(),
    favouriteCar: () => p.oneToOne(Car2).ref().updateRule('cascade').deleteRule('set null').nullable(),
    cars: () => p.manyToMany(Car2).joinColumns('user2_first_name', 'user2_last_name').inverseJoinColumns('car2_name', 'car2_year'),
    sandwiches: () => p.manyToMany(Sandwich).joinColumns('user2_first_name', 'user2_last_name').inverseJoinColumn('sandwich_id'),
  },
});
",
]
`;

exports[`EntityGenerator > generate entities from schema with forceUndefined = false [mssql] > mssql-entity-dump 1`] = `
[
  "import { PrimaryKeyProp, type Ref, defineEntity, p } from '@mikro-orm/core';
import { Author2 } from './Author2';

export class Address2 {
  [PrimaryKeyProp]?: 'author';
  author!: Ref<Author2>;
  value!: string;
}

export const Address2Schema = defineEntity({
  class: Address2,
  comment: 'This is address table',
  properties: {
    author: () => p.oneToOne(Author2).primary().ref().updateRule('cascade').deleteRule('cascade'),
    value: p.string().comment('This is address property'),
  },
});
",
  "import { Collection, type Opt, type Ref, defineEntity, p } from '@mikro-orm/core';
import { Address2 } from './Address2';
import { Book2 } from './Book2';

export class Author2 {
  id!: number;
  createdAt!: Date & Opt;
  updatedAt!: Date & Opt;
  name!: string;
  email!: string;
  age: number | null = null;
  termsAccepted: boolean & Opt = false;
  optional: boolean | null = null;
  identities: string | null = null;
  born: string | null = null;
  bornTime: string | null = null;
  favouriteBook: Ref<Book2> | null = null;
  favouriteAuthor: Ref<Author2> | null = null;
  authorToFriend = new Collection<Author2>(this);
  following = new Collection<Author2>(this);
  address2: Ref<Address2> | null = null;
  author2Collection = new Collection<Author2>(this);
  authorToFriendInverse = new Collection<Author2>(this);
  followingInverse = new Collection<Author2>(this);
  book2Collection = new Collection<Book2>(this);
}

export const Author2Schema = defineEntity({
  class: Author2,
  indexes: [{ name: 'author2_name_age_index', properties: ['name', 'age'] }],
  uniques: [{ name: 'author2_name_email_unique', properties: ['name', 'email'] }],
  properties: {
    id: p.integer().primary(),
    createdAt: p.datetime().length(3).defaultRaw(\`current_timestamp\`),
    updatedAt: p.datetime().length(3).defaultRaw(\`current_timestamp\`),
    name: p.string().index('custom_idx_name_123'),
    email: p.string().index('custom_email_index_name').unique('custom_email_unique_name'),
    age: p.integer().nullable(),
    termsAccepted: p.boolean().defaultRaw(\`0\`).index('author2_terms_accepted_index'),
    optional: p.boolean().nullable(),
    identities: p.text().nullable(),
    born: p.date().nullable().index('author2_born_index'),
    bornTime: p.time().nullable().index('born_time_idx'),
    favouriteBook: () => p.manyToOne(Book2).ref().deleteRule('cascade').nullable(),
    favouriteAuthor: () => p.manyToOne(Author2).ref().nullable(),
    authorToFriend: () => p.manyToMany(Author2).pivotTable('author_to_friend').joinColumn('author2_1_id').inverseJoinColumn('author2_2_id'),
    following: () => p.manyToMany(Author2).joinColumn('author2_1_id').inverseJoinColumn('author2_2_id'),
    address2: () => p.oneToOne(Address2).ref().mappedBy('author'),
    author2Collection: () => p.oneToMany(Author2).mappedBy('favouriteAuthor'),
    authorToFriendInverse: () => p.manyToMany(Author2).mappedBy('authorToFriend'),
    followingInverse: () => p.manyToMany(Author2).mappedBy('following'),
    book2Collection: () => p.oneToMany(Book2).mappedBy('author'),
  },
});
",
  "import { Collection, type Ref, defineEntity, p } from '@mikro-orm/core';

export class BaseUser2 {
  id!: number;
  firstName!: string;
  lastName!: string;
  type!: TBaseUser2Type;
  ownerProp: string | null = null;
  favouriteEmployee: Ref<BaseUser2> | null = null;
  favouriteManager: Ref<BaseUser2> | null = null;
  employeeProp: number | null = null;
  managerProp: string | null = null;
  baseUser2Collection = new Collection<BaseUser2>(this);
  baseUser2: Ref<BaseUser2> | null = null;
}

export const BaseUser2Type = {
  EMPLOYEE: 'employee',
  MANAGER: 'manager',
  OWNER: 'owner',
} as const;

export type TBaseUser2Type = (typeof BaseUser2Type)[keyof typeof BaseUser2Type];

export const BaseUser2Schema = defineEntity({
  class: BaseUser2,
  uniques: [
    {
      name: 'base_user2_favourite_manager_id_unique',
      expression: 'create unique index [base_user2_favourite_manager_id_unique] on [base_user2] (where ([favourite_manager_id] IS NOT NULL))',
      properties: ['favouriteManager'],
    },
  ],
  properties: {
    id: p.integer().primary(),
    firstName: p.string().length(100),
    lastName: p.string().length(100),
    type: p.enum(() => BaseUser2Type).index('base_user2_type_index'),
    ownerProp: p.string().nullable(),
    favouriteEmployee: () => p.manyToOne(BaseUser2).ref().nullable(),
    favouriteManager: () => p.oneToOne(BaseUser2).ref().nullable(),
    employeeProp: p.integer().nullable(),
    managerProp: p.string().nullable(),
    baseUser2Collection: () => p.oneToMany(BaseUser2).mappedBy('favouriteEmployee'),
    baseUser2: () => p.oneToOne(BaseUser2).ref().mappedBy('favouriteManager'),
  },
});
",
  "import { Collection, defineEntity, p } from '@mikro-orm/core';
import { Book2 } from './Book2';
import { Book2Tags } from './Book2Tags';

export class BookTag2 {
  id!: bigint;
  name!: string;
  bookToTagUnorderedInverse = new Collection<Book2>(this);
  book2TagsCollection = new Collection<Book2Tags>(this);
}

export const BookTag2Schema = defineEntity({
  class: BookTag2,
  properties: {
    id: p.bigint().primary(),
    name: p.string().length(50),
    bookToTagUnorderedInverse: () => p.manyToMany(Book2).mappedBy('bookToTagUnordered'),
    book2TagsCollection: () => p.oneToMany(Book2Tags).mappedBy('bookTag2'),
  },
});
",
  "import { Collection, type Opt, PrimaryKeyProp, type Ref, defineEntity, p } from '@mikro-orm/core';
import { Author2 } from './Author2';
import { Book2Tags } from './Book2Tags';
import { BookTag2 } from './BookTag2';
import { Publisher2 } from './Publisher2';
import { Test2 } from './Test2';

export class Book2 {
  [PrimaryKeyProp]?: 'uuidPk';
  uuidPk!: string;
  createdAt!: Date & Opt;
  isbn: string | null = null;
  title?: string | null = '';
  perex: string | null = null;
  price: string | null = null;
  float: number | null = null;
  float36: number | null = null;
  double: number | null = null;
  meta: string | null = null;
  author!: Ref<Author2>;
  publisher: Ref<Publisher2> | null = null;
  bookToTagUnordered = new Collection<BookTag2>(this);
  author2Collection = new Collection<Author2>(this);
  book2TagsCollection = new Collection<Book2Tags>(this);
  test2: Ref<Test2> | null = null;
}

export const Book2Schema = defineEntity({
  class: Book2,
  uniques: [
    {
      name: 'book2_isbn_unique',
      expression: 'create unique index [book2_isbn_unique] on [book2] (where ([isbn] IS NOT NULL))',
      properties: ['isbn'],
    },
  ],
  properties: {
    uuidPk: p.uuid().primary(),
    createdAt: p.datetime().length(3).defaultRaw(\`current_timestamp\`),
    isbn: p.character().length(13).nullable().unique('book2_isbn_unique'),
    title: p.string().nullable(),
    perex: p.text().nullable(),
    price: p.decimal().precision(8).scale(2).nullable(),
    float: p.float().nullable(),
    float36: p.double().nullable(),
    double: p.double().nullable(),
    meta: p.string().length(-1).nullable(),
    author: () => p.manyToOne(Author2).ref(),
    publisher: () => p.manyToOne(Publisher2).ref().updateRule('cascade').deleteRule('cascade').nullable(),
    bookToTagUnordered: () => p.manyToMany(BookTag2).pivotTable('book_to_tag_unordered').joinColumn('book2_uuid_pk').inverseJoinColumn('book_tag2_id'),
    author2Collection: () => p.oneToMany(Author2).mappedBy('favouriteBook'),
    book2TagsCollection: () => p.oneToMany(Book2Tags).mappedBy('book2'),
    test2: () => p.oneToOne(Test2).ref().mappedBy('book'),
  },
});
",
  "import { PrimaryKeyProp, type Ref, defineEntity, p } from '@mikro-orm/core';
import { Book2 } from './Book2';
import { BookTag2 } from './BookTag2';

export class Book2Tags {
  [PrimaryKeyProp]?: 'order';
  order!: number;
  book2!: Ref<Book2>;
  bookTag2!: Ref<BookTag2>;
}

export const Book2TagsSchema = defineEntity({
  class: Book2Tags,
  tableName: 'book2_tags',
  properties: {
    order: p.integer().primary(),
    book2: () => p.manyToOne(Book2).ref().updateRule('cascade').deleteRule('cascade'),
    bookTag2: () => p.manyToOne(BookTag2).ref().updateRule('cascade').deleteRule('cascade'),
  },
});
",
  "import { type Ref, defineEntity, p } from '@mikro-orm/core';
import { Car2 } from './Car2';

export class CarOwner2 {
  id!: number;
  name!: string;
  car!: Ref<Car2>;
}

export const CarOwner2Schema = defineEntity({
  class: CarOwner2,
  properties: {
    id: p.integer().primary(),
    name: p.string(),
    car: () => p.manyToOne(Car2).ref().updateRule('cascade').index(true),
  },
});
",
  "import { Collection, PrimaryKeyProp, type Ref, defineEntity, p } from '@mikro-orm/core';
import { CarOwner2 } from './CarOwner2';
import { User2 } from './User2';

export class Car2 {
  [PrimaryKeyProp]?: ['name', 'year'];
  name!: string;
  year!: number;
  price!: number;
  carOwner2Collection = new Collection<CarOwner2>(this);
  user2: Ref<User2> | null = null;
  carsInverse = new Collection<User2>(this);
}

export const Car2Schema = defineEntity({
  class: Car2,
  properties: {
    name: p.string().primary().length(100).index('car2_name_index'),
    year: p.integer().primary().index('car2_year_index'),
    price: p.integer(),
    carOwner2Collection: () => p.oneToMany(CarOwner2).mappedBy('car'),
    user2: () => p.oneToOne(User2).ref().mappedBy('favouriteCar'),
    carsInverse: () => p.manyToMany(User2).mappedBy('cars'),
  },
});
",
  "import { PrimaryKeyProp, type Ref, defineEntity, p } from '@mikro-orm/core';
import { Test2 } from './Test2';

export class Configuration2 {
  [PrimaryKeyProp]?: ['property', 'test'];
  property!: string;
  test!: Ref<Test2>;
  value!: string;
}

export const Configuration2Schema = defineEntity({
  class: Configuration2,
  properties: {
    property: p.string().primary(),
    test: () => p.manyToOne(Test2).primary().ref().updateRule('cascade'),
    value: p.string(),
  },
});
",
  "import { defineEntity, p } from '@mikro-orm/core';

export class Dummy2 {
  id!: number;
}

export const Dummy2Schema = defineEntity({
  class: Dummy2,
  properties: {
    id: p.integer().primary(),
  },
});
",
  "import { Collection, type Opt, type Ref, defineEntity, p } from '@mikro-orm/core';
import { FooBaz2 } from './FooBaz2';
import { FooParam2 } from './FooParam2';

export class FooBar2 {
  id!: number;
  name!: string;
  baz: Ref<FooBaz2> | null = null;
  fooBar: Ref<FooBar2> | null = null;
  version!: Date & Opt;
  blob: Buffer | null = null;
  array: string | null = null;
  object: string | null = null;
  fooBar2: Ref<FooBar2> | null = null;
  fooParam2Collection = new Collection<FooParam2>(this);
}

export const FooBar2Schema = defineEntity({
  class: FooBar2,
  uniques: [
    {
      name: 'foo_bar2_baz_id_unique',
      expression: 'create unique index [foo_bar2_baz_id_unique] on [foo_bar2] (where ([baz_id] IS NOT NULL))',
      properties: ['baz'],
    },
    {
      name: 'foo_bar2_foo_bar_id_unique',
      expression: 'create unique index [foo_bar2_foo_bar_id_unique] on [foo_bar2] (where ([foo_bar_id] IS NOT NULL))',
      properties: ['fooBar'],
    },
  ],
  properties: {
    id: p.integer().primary(),
    name: p.string(),
    baz: () => p.oneToOne(FooBaz2).ref().updateRule('cascade').deleteRule('set null').nullable(),
    fooBar: () => p.oneToOne(FooBar2).ref().nullable(),
    version: p.datetime().length(0).defaultRaw(\`current_timestamp\`),
    blob: p.blob().length(-1).nullable(),
    array: p.text().nullable(),
    object: p.string().length(-1).nullable(),
    fooBar2: () => p.oneToOne(FooBar2).ref().mappedBy('fooBar'),
    fooParam2Collection: () => p.oneToMany(FooParam2).mappedBy('bar'),
  },
});
",
  "import { Collection, type Opt, type Ref, defineEntity, p } from '@mikro-orm/core';
import { FooBar2 } from './FooBar2';
import { FooParam2 } from './FooParam2';

export class FooBaz2 {
  id!: number;
  name!: string;
  code!: string;
  version!: Date & Opt;
  fooBar2: Ref<FooBar2> | null = null;
  fooParam2Collection = new Collection<FooParam2>(this);
}

export const FooBaz2Schema = defineEntity({
  class: FooBaz2,
  properties: {
    id: p.integer().primary(),
    name: p.string(),
    code: p.string().columnType('varchar(255)'),
    version: p.datetime().length(3).defaultRaw(\`current_timestamp\`),
    fooBar2: () => p.oneToOne(FooBar2).ref().mappedBy('baz'),
    fooParam2Collection: () => p.oneToMany(FooParam2).mappedBy('baz'),
  },
});
",
  "import { PrimaryKeyProp, type Ref, defineEntity, p } from '@mikro-orm/core';
import { FooBar2 } from './FooBar2';
import { FooBaz2 } from './FooBaz2';

export class FooParam2 {
  [PrimaryKeyProp]?: ['bar', 'baz'];
  bar!: Ref<FooBar2>;
  baz!: Ref<FooBaz2>;
  value!: string;
}

export const FooParam2Schema = defineEntity({
  class: FooParam2,
  properties: {
    bar: () => p.manyToOne(FooBar2).primary().ref().updateRule('cascade'),
    baz: () => p.manyToOne(FooBaz2).primary().ref(),
    value: p.string(),
  },
});
",
  "import { Collection, type Opt, defineEntity, p } from '@mikro-orm/core';
import { Book2 } from './Book2';
import { Publisher2Tests } from './Publisher2Tests';

export class Publisher2 {
  id!: number;
  name: string & Opt = 'asd';
  type: TPublisher2Type & Opt = Publisher2Type.LOCAL;
  type2: TPublisher2Type2 & Opt = Publisher2Type2.LOCAL;
  enum1: number | null = null;
  enum2: number | null = null;
  enum3: number | null = null;
  enum4: TPublisher2Enum4 | null = null;
  book2Collection = new Collection<Book2>(this);
  publisher2TestsCollection = new Collection<Publisher2Tests>(this);
}

export const Publisher2Type = {
  LOCAL: 'local',
  GLOBAL: 'global',
} as const;

export type TPublisher2Type = (typeof Publisher2Type)[keyof typeof Publisher2Type];

export const Publisher2Type2 = {
  LOCAL: 'LOCAL',
  GLOBAL: 'GLOBAL',
} as const;

export type TPublisher2Type2 = (typeof Publisher2Type2)[keyof typeof Publisher2Type2];

export const Publisher2Enum4 = {
  A: 'a',
  B: 'b',
  C: 'c',
} as const;

export type TPublisher2Enum4 = (typeof Publisher2Enum4)[keyof typeof Publisher2Enum4];

export const Publisher2Schema = defineEntity({
  class: Publisher2,
  properties: {
    id: p.integer().primary(),
    name: p.string(),
    type: p.enum(() => Publisher2Type),
    type2: p.enum(() => Publisher2Type2),
    enum1: p.tinyint().nullable(),
    enum2: p.tinyint().nullable(),
    enum3: p.tinyint().nullable(),
    enum4: p.enum(() => Publisher2Enum4).nullable(),
    book2Collection: () => p.oneToMany(Book2).mappedBy('publisher'),
    publisher2TestsCollection: () => p.oneToMany(Publisher2Tests).mappedBy('publisher2'),
  },
});
",
  "import { type Ref, defineEntity, p } from '@mikro-orm/core';
import { Publisher2 } from './Publisher2';
import { Test2 } from './Test2';

export class Publisher2Tests {
  id!: number;
  publisher2!: Ref<Publisher2>;
  test2!: Ref<Test2>;
}

export const Publisher2TestsSchema = defineEntity({
  class: Publisher2Tests,
  tableName: 'publisher2_tests',
  properties: {
    id: p.integer().primary(),
    publisher2: () => p.manyToOne(Publisher2).ref().updateRule('cascade').deleteRule('cascade'),
    test2: () => p.manyToOne(Test2).ref().updateRule('cascade').deleteRule('cascade'),
  },
});
",
  "import { Collection, defineEntity, p } from '@mikro-orm/core';
import { User2 } from './User2';

export class Sandwich {
  id!: number;
  name!: string;
  price!: number;
  sandwichesInverse = new Collection<User2>(this);
}

export const SandwichSchema = defineEntity({
  class: Sandwich,
  properties: {
    id: p.integer().primary(),
    name: p.string(),
    price: p.integer(),
    sandwichesInverse: () => p.manyToMany(User2).mappedBy('sandwiches'),
  },
});
",
  "import { Collection, type Opt, type Ref, defineEntity, p } from '@mikro-orm/core';
import { Book2 } from './Book2';
import { Configuration2 } from './Configuration2';
import { Publisher2Tests } from './Publisher2Tests';

export class Test2 {
  id!: number;
  name: string | null = null;
  book: Ref<Book2> | null = null;
  version: number & Opt = 1;
  configuration2Collection = new Collection<Configuration2>(this);
  publisher2TestsCollection = new Collection<Publisher2Tests>(this);
}

export const Test2Schema = defineEntity({
  class: Test2,
  uniques: [
    {
      name: 'test2_book_uuid_pk_unique',
      expression: 'create unique index [test2_book_uuid_pk_unique] on [test2] (where ([book_uuid_pk] IS NOT NULL))',
      properties: ['book'],
    },
  ],
  properties: {
    id: p.integer().primary(),
    name: p.string().nullable(),
    book: () => p.oneToOne(Book2).ref().nullable(),
    version: p.integer(),
    configuration2Collection: () => p.oneToMany(Configuration2).mappedBy('test'),
    publisher2TestsCollection: () => p.oneToMany(Publisher2Tests).mappedBy('test2'),
  },
});
",
  "import { Collection, PrimaryKeyProp, type Ref, defineEntity, p } from '@mikro-orm/core';
import { Car2 } from './Car2';
import { Sandwich } from './Sandwich';

export class User2 {
  [PrimaryKeyProp]?: ['firstName', 'lastName'];
  firstName!: string;
  lastName!: string;
  foo: number | null = null;
  favouriteCar!: Ref<Car2> | null;
  cars = new Collection<Car2>(this);
  sandwiches = new Collection<Sandwich>(this);
}

export const User2Schema = defineEntity({
  class: User2,
  uniques: [
    {
      name: 'user2_favourite_car_name_favourite_car_year_unique',
      expression: 'create unique index [user2_favourite_car_name_favourite_car_year_unique] on [user2] (where ([favourite_car_name] IS NOT NULL AND [favourite_car_year] IS NOT NULL))',
      properties: ['favouriteCarName'],
    },
  ],
  properties: {
    firstName: p.string().primary().length(100),
    lastName: p.string().primary().length(100),
    foo: p.integer().nullable(),
    favouriteCar: () => p.oneToOne(Car2).ref().updateRule('cascade').deleteRule('set null').nullable(),
    cars: () => p.manyToMany(Car2).joinColumns('user2_first_name', 'user2_last_name').inverseJoinColumns('car2_name', 'car2_year'),
    sandwiches: () => p.manyToMany(Sandwich).joinColumns('user2_first_name', 'user2_last_name').inverseJoinColumn('sandwich_id'),
  },
});
",
]
`;

exports[`EntityGenerator > generate entities from schema with forceUndefined = true and undefinedDefaults = true [mssql] > mssql-entity-dump 1`] = `
[
  "import { PrimaryKeyProp, type Ref, defineEntity, p } from '@mikro-orm/core';
import { Author2 } from './Author2';

export class Address2 {
  [PrimaryKeyProp]?: 'author';
  author!: Ref<Author2>;
  value!: string;
}

export const Address2Schema = defineEntity({
  class: Address2,
  comment: 'This is address table',
  properties: {
    author: () => p.oneToOne(Author2).primary().ref().updateRule('cascade').deleteRule('cascade'),
    value: p.string().comment('This is address property'),
  },
});
",
  "import { Collection, type Opt, type Ref, defineEntity, p } from '@mikro-orm/core';
import { Address2 } from './Address2';
import { Book2 } from './Book2';

export class Author2 {
  id!: number;
  createdAt!: Date & Opt;
  updatedAt!: Date & Opt;
  name!: string;
  email!: string;
  age?: number | null;
  termsAccepted: boolean & Opt = false;
  optional?: boolean | null;
  identities?: string | null;
  born?: string | null;
  bornTime?: string | null;
  favouriteBook?: Ref<Book2> | null;
  favouriteAuthor?: Ref<Author2> | null;
  authorToFriend = new Collection<Author2>(this);
  following = new Collection<Author2>(this);
  address2: Ref<Address2> | null = null;
  author2Collection = new Collection<Author2>(this);
  authorToFriendInverse = new Collection<Author2>(this);
  followingInverse = new Collection<Author2>(this);
  book2Collection = new Collection<Book2>(this);
}

export const Author2Schema = defineEntity({
  class: Author2,
  indexes: [{ name: 'author2_name_age_index', properties: ['name', 'age'] }],
  uniques: [{ name: 'author2_name_email_unique', properties: ['name', 'email'] }],
  properties: {
    id: p.integer().primary(),
    createdAt: p.datetime().length(3).defaultRaw(\`current_timestamp\`),
    updatedAt: p.datetime().length(3).defaultRaw(\`current_timestamp\`),
    name: p.string().index('custom_idx_name_123'),
    email: p.string().index('custom_email_index_name').unique('custom_email_unique_name'),
    age: p.integer().nullable(),
    termsAccepted: p.boolean().defaultRaw(\`0\`).index('author2_terms_accepted_index'),
    optional: p.boolean().nullable(),
    identities: p.text().nullable(),
    born: p.date().nullable().index('author2_born_index'),
    bornTime: p.time().nullable().index('born_time_idx'),
    favouriteBook: () => p.manyToOne(Book2).ref().deleteRule('cascade').nullable(),
    favouriteAuthor: () => p.manyToOne(Author2).ref().nullable(),
    authorToFriend: () => p.manyToMany(Author2).pivotTable('author_to_friend').joinColumn('author2_1_id').inverseJoinColumn('author2_2_id'),
    following: () => p.manyToMany(Author2).joinColumn('author2_1_id').inverseJoinColumn('author2_2_id'),
    address2: () => p.oneToOne(Address2).ref().mappedBy('author'),
    author2Collection: () => p.oneToMany(Author2).mappedBy('favouriteAuthor'),
    authorToFriendInverse: () => p.manyToMany(Author2).mappedBy('authorToFriend'),
    followingInverse: () => p.manyToMany(Author2).mappedBy('following'),
    book2Collection: () => p.oneToMany(Book2).mappedBy('author'),
  },
});
",
  "import { Collection, type Ref, defineEntity, p } from '@mikro-orm/core';

export class BaseUser2 {
  id!: number;
  firstName!: string;
  lastName!: string;
  type!: TBaseUser2Type;
  ownerProp?: string | null;
  favouriteEmployee?: Ref<BaseUser2> | null;
  favouriteManager?: Ref<BaseUser2> | null;
  employeeProp?: number | null;
  managerProp?: string | null;
  baseUser2Collection = new Collection<BaseUser2>(this);
  baseUser2: Ref<BaseUser2> | null = null;
}

export const BaseUser2Type = {
  EMPLOYEE: 'employee',
  MANAGER: 'manager',
  OWNER: 'owner',
} as const;

export type TBaseUser2Type = (typeof BaseUser2Type)[keyof typeof BaseUser2Type];

export const BaseUser2Schema = defineEntity({
  class: BaseUser2,
  uniques: [
    {
      name: 'base_user2_favourite_manager_id_unique',
      expression: 'create unique index [base_user2_favourite_manager_id_unique] on [base_user2] (where ([favourite_manager_id] IS NOT NULL))',
      properties: ['favouriteManager'],
    },
  ],
  properties: {
    id: p.integer().primary(),
    firstName: p.string().length(100),
    lastName: p.string().length(100),
    type: p.enum(() => BaseUser2Type).index('base_user2_type_index'),
    ownerProp: p.string().nullable(),
    favouriteEmployee: () => p.manyToOne(BaseUser2).ref().nullable(),
    favouriteManager: () => p.oneToOne(BaseUser2).ref().nullable(),
    employeeProp: p.integer().nullable(),
    managerProp: p.string().nullable(),
    baseUser2Collection: () => p.oneToMany(BaseUser2).mappedBy('favouriteEmployee'),
    baseUser2: () => p.oneToOne(BaseUser2).ref().mappedBy('favouriteManager'),
  },
});
",
  "import { Collection, defineEntity, p } from '@mikro-orm/core';
import { Book2 } from './Book2';
import { Book2Tags } from './Book2Tags';

export class BookTag2 {
  id!: bigint;
  name!: string;
  bookToTagUnorderedInverse = new Collection<Book2>(this);
  book2TagsCollection = new Collection<Book2Tags>(this);
}

export const BookTag2Schema = defineEntity({
  class: BookTag2,
  properties: {
    id: p.bigint().primary(),
    name: p.string().length(50),
    bookToTagUnorderedInverse: () => p.manyToMany(Book2).mappedBy('bookToTagUnordered'),
    book2TagsCollection: () => p.oneToMany(Book2Tags).mappedBy('bookTag2'),
  },
});
",
  "import { Collection, type Opt, PrimaryKeyProp, type Ref, defineEntity, p } from '@mikro-orm/core';
import { Author2 } from './Author2';
import { Book2Tags } from './Book2Tags';
import { BookTag2 } from './BookTag2';
import { Publisher2 } from './Publisher2';
import { Test2 } from './Test2';

export class Book2 {
  [PrimaryKeyProp]?: 'uuidPk';
  uuidPk!: string;
  createdAt!: Date & Opt;
  isbn?: string | null;
  title?: string | null = '';
  perex?: string | null;
  price?: string | null;
  float?: number | null;
  float36?: number | null;
  double?: number | null;
  meta?: string | null;
  author!: Ref<Author2>;
  publisher?: Ref<Publisher2> | null;
  bookToTagUnordered = new Collection<BookTag2>(this);
  author2Collection = new Collection<Author2>(this);
  book2TagsCollection = new Collection<Book2Tags>(this);
  test2: Ref<Test2> | null = null;
}

export const Book2Schema = defineEntity({
  class: Book2,
  uniques: [
    {
      name: 'book2_isbn_unique',
      expression: 'create unique index [book2_isbn_unique] on [book2] (where ([isbn] IS NOT NULL))',
      properties: ['isbn'],
    },
  ],
  properties: {
    uuidPk: p.uuid().primary(),
    createdAt: p.datetime().length(3).defaultRaw(\`current_timestamp\`),
    isbn: p.character().length(13).nullable().unique('book2_isbn_unique'),
    title: p.string().nullable(),
    perex: p.text().nullable(),
    price: p.decimal().precision(8).scale(2).nullable(),
    float: p.float().nullable(),
    float36: p.double().nullable(),
    double: p.double().nullable(),
    meta: p.string().length(-1).nullable(),
    author: () => p.manyToOne(Author2).ref(),
    publisher: () => p.manyToOne(Publisher2).ref().updateRule('cascade').deleteRule('cascade').nullable(),
    bookToTagUnordered: () => p.manyToMany(BookTag2).pivotTable('book_to_tag_unordered').joinColumn('book2_uuid_pk').inverseJoinColumn('book_tag2_id'),
    author2Collection: () => p.oneToMany(Author2).mappedBy('favouriteBook'),
    book2TagsCollection: () => p.oneToMany(Book2Tags).mappedBy('book2'),
    test2: () => p.oneToOne(Test2).ref().mappedBy('book'),
  },
});
",
  "import { PrimaryKeyProp, type Ref, defineEntity, p } from '@mikro-orm/core';
import { Book2 } from './Book2';
import { BookTag2 } from './BookTag2';

export class Book2Tags {
  [PrimaryKeyProp]?: 'order';
  order!: number;
  book2!: Ref<Book2>;
  bookTag2!: Ref<BookTag2>;
}

export const Book2TagsSchema = defineEntity({
  class: Book2Tags,
  tableName: 'book2_tags',
  properties: {
    order: p.integer().primary(),
    book2: () => p.manyToOne(Book2).ref().updateRule('cascade').deleteRule('cascade'),
    bookTag2: () => p.manyToOne(BookTag2).ref().updateRule('cascade').deleteRule('cascade'),
  },
});
",
  "import { type Ref, defineEntity, p } from '@mikro-orm/core';
import { Car2 } from './Car2';

export class CarOwner2 {
  id!: number;
  name!: string;
  car!: Ref<Car2>;
}

export const CarOwner2Schema = defineEntity({
  class: CarOwner2,
  properties: {
    id: p.integer().primary(),
    name: p.string(),
    car: () => p.manyToOne(Car2).ref().updateRule('cascade').index(true),
  },
});
",
  "import { Collection, PrimaryKeyProp, type Ref, defineEntity, p } from '@mikro-orm/core';
import { CarOwner2 } from './CarOwner2';
import { User2 } from './User2';

export class Car2 {
  [PrimaryKeyProp]?: ['name', 'year'];
  name!: string;
  year!: number;
  price!: number;
  carOwner2Collection = new Collection<CarOwner2>(this);
  user2: Ref<User2> | null = null;
  carsInverse = new Collection<User2>(this);
}

export const Car2Schema = defineEntity({
  class: Car2,
  properties: {
    name: p.string().primary().length(100).index('car2_name_index'),
    year: p.integer().primary().index('car2_year_index'),
    price: p.integer(),
    carOwner2Collection: () => p.oneToMany(CarOwner2).mappedBy('car'),
    user2: () => p.oneToOne(User2).ref().mappedBy('favouriteCar'),
    carsInverse: () => p.manyToMany(User2).mappedBy('cars'),
  },
});
",
  "import { PrimaryKeyProp, type Ref, defineEntity, p } from '@mikro-orm/core';
import { Test2 } from './Test2';

export class Configuration2 {
  [PrimaryKeyProp]?: ['property', 'test'];
  property!: string;
  test!: Ref<Test2>;
  value!: string;
}

export const Configuration2Schema = defineEntity({
  class: Configuration2,
  properties: {
    property: p.string().primary(),
    test: () => p.manyToOne(Test2).primary().ref().updateRule('cascade'),
    value: p.string(),
  },
});
",
  "import { defineEntity, p } from '@mikro-orm/core';

export class Dummy2 {
  id!: number;
}

export const Dummy2Schema = defineEntity({
  class: Dummy2,
  properties: {
    id: p.integer().primary(),
  },
});
",
  "import { Collection, type Opt, type Ref, defineEntity, p } from '@mikro-orm/core';
import { FooBaz2 } from './FooBaz2';
import { FooParam2 } from './FooParam2';

export class FooBar2 {
  id!: number;
  name!: string;
  baz?: Ref<FooBaz2> | null;
  fooBar?: Ref<FooBar2> | null;
  version!: Date & Opt;
  blob?: Buffer | null;
  array?: string | null;
  object?: string | null;
  fooBar2: Ref<FooBar2> | null = null;
  fooParam2Collection = new Collection<FooParam2>(this);
}

export const FooBar2Schema = defineEntity({
  class: FooBar2,
  uniques: [
    {
      name: 'foo_bar2_baz_id_unique',
      expression: 'create unique index [foo_bar2_baz_id_unique] on [foo_bar2] (where ([baz_id] IS NOT NULL))',
      properties: ['baz'],
    },
    {
      name: 'foo_bar2_foo_bar_id_unique',
      expression: 'create unique index [foo_bar2_foo_bar_id_unique] on [foo_bar2] (where ([foo_bar_id] IS NOT NULL))',
      properties: ['fooBar'],
    },
  ],
  properties: {
    id: p.integer().primary(),
    name: p.string(),
    baz: () => p.oneToOne(FooBaz2).ref().updateRule('cascade').deleteRule('set null').nullable(),
    fooBar: () => p.oneToOne(FooBar2).ref().nullable(),
    version: p.datetime().length(0).defaultRaw(\`current_timestamp\`),
    blob: p.blob().length(-1).nullable(),
    array: p.text().nullable(),
    object: p.string().length(-1).nullable(),
    fooBar2: () => p.oneToOne(FooBar2).ref().mappedBy('fooBar'),
    fooParam2Collection: () => p.oneToMany(FooParam2).mappedBy('bar'),
  },
});
",
  "import { Collection, type Opt, type Ref, defineEntity, p } from '@mikro-orm/core';
import { FooBar2 } from './FooBar2';
import { FooParam2 } from './FooParam2';

export class FooBaz2 {
  id!: number;
  name!: string;
  code!: string;
  version!: Date & Opt;
  fooBar2: Ref<FooBar2> | null = null;
  fooParam2Collection = new Collection<FooParam2>(this);
}

export const FooBaz2Schema = defineEntity({
  class: FooBaz2,
  properties: {
    id: p.integer().primary(),
    name: p.string(),
    code: p.string().columnType('varchar(255)'),
    version: p.datetime().length(3).defaultRaw(\`current_timestamp\`),
    fooBar2: () => p.oneToOne(FooBar2).ref().mappedBy('baz'),
    fooParam2Collection: () => p.oneToMany(FooParam2).mappedBy('baz'),
  },
});
",
  "import { PrimaryKeyProp, type Ref, defineEntity, p } from '@mikro-orm/core';
import { FooBar2 } from './FooBar2';
import { FooBaz2 } from './FooBaz2';

export class FooParam2 {
  [PrimaryKeyProp]?: ['bar', 'baz'];
  bar!: Ref<FooBar2>;
  baz!: Ref<FooBaz2>;
  value!: string;
}

export const FooParam2Schema = defineEntity({
  class: FooParam2,
  properties: {
    bar: () => p.manyToOne(FooBar2).primary().ref().updateRule('cascade'),
    baz: () => p.manyToOne(FooBaz2).primary().ref(),
    value: p.string(),
  },
});
",
  "import { Collection, type Opt, defineEntity, p } from '@mikro-orm/core';
import { Book2 } from './Book2';
import { Publisher2Tests } from './Publisher2Tests';

export class Publisher2 {
  id!: number;
  name: string & Opt = 'asd';
  type: TPublisher2Type & Opt = Publisher2Type.LOCAL;
  type2: TPublisher2Type2 & Opt = Publisher2Type2.LOCAL;
  enum1?: number | null;
  enum2?: number | null;
  enum3?: number | null;
  enum4?: TPublisher2Enum4 | null;
  book2Collection = new Collection<Book2>(this);
  publisher2TestsCollection = new Collection<Publisher2Tests>(this);
}

export const Publisher2Type = {
  LOCAL: 'local',
  GLOBAL: 'global',
} as const;

export type TPublisher2Type = (typeof Publisher2Type)[keyof typeof Publisher2Type];

export const Publisher2Type2 = {
  LOCAL: 'LOCAL',
  GLOBAL: 'GLOBAL',
} as const;

export type TPublisher2Type2 = (typeof Publisher2Type2)[keyof typeof Publisher2Type2];

export const Publisher2Enum4 = {
  A: 'a',
  B: 'b',
  C: 'c',
} as const;

export type TPublisher2Enum4 = (typeof Publisher2Enum4)[keyof typeof Publisher2Enum4];

export const Publisher2Schema = defineEntity({
  class: Publisher2,
  properties: {
    id: p.integer().primary(),
    name: p.string(),
    type: p.enum(() => Publisher2Type),
    type2: p.enum(() => Publisher2Type2),
    enum1: p.tinyint().nullable(),
    enum2: p.tinyint().nullable(),
    enum3: p.tinyint().nullable(),
    enum4: p.enum(() => Publisher2Enum4).nullable(),
    book2Collection: () => p.oneToMany(Book2).mappedBy('publisher'),
    publisher2TestsCollection: () => p.oneToMany(Publisher2Tests).mappedBy('publisher2'),
  },
});
",
  "import { type Ref, defineEntity, p } from '@mikro-orm/core';
import { Publisher2 } from './Publisher2';
import { Test2 } from './Test2';

export class Publisher2Tests {
  id!: number;
  publisher2!: Ref<Publisher2>;
  test2!: Ref<Test2>;
}

export const Publisher2TestsSchema = defineEntity({
  class: Publisher2Tests,
  tableName: 'publisher2_tests',
  properties: {
    id: p.integer().primary(),
    publisher2: () => p.manyToOne(Publisher2).ref().updateRule('cascade').deleteRule('cascade'),
    test2: () => p.manyToOne(Test2).ref().updateRule('cascade').deleteRule('cascade'),
  },
});
",
  "import { Collection, defineEntity, p } from '@mikro-orm/core';
import { User2 } from './User2';

export class Sandwich {
  id!: number;
  name!: string;
  price!: number;
  sandwichesInverse = new Collection<User2>(this);
}

export const SandwichSchema = defineEntity({
  class: Sandwich,
  properties: {
    id: p.integer().primary(),
    name: p.string(),
    price: p.integer(),
    sandwichesInverse: () => p.manyToMany(User2).mappedBy('sandwiches'),
  },
});
",
  "import { Collection, type Opt, type Ref, defineEntity, p } from '@mikro-orm/core';
import { Book2 } from './Book2';
import { Configuration2 } from './Configuration2';
import { Publisher2Tests } from './Publisher2Tests';

export class Test2 {
  id!: number;
  name?: string | null;
  book?: Ref<Book2> | null;
  version: number & Opt = 1;
  configuration2Collection = new Collection<Configuration2>(this);
  publisher2TestsCollection = new Collection<Publisher2Tests>(this);
}

export const Test2Schema = defineEntity({
  class: Test2,
  uniques: [
    {
      name: 'test2_book_uuid_pk_unique',
      expression: 'create unique index [test2_book_uuid_pk_unique] on [test2] (where ([book_uuid_pk] IS NOT NULL))',
      properties: ['book'],
    },
  ],
  properties: {
    id: p.integer().primary(),
    name: p.string().nullable(),
    book: () => p.oneToOne(Book2).ref().nullable(),
    version: p.integer(),
    configuration2Collection: () => p.oneToMany(Configuration2).mappedBy('test'),
    publisher2TestsCollection: () => p.oneToMany(Publisher2Tests).mappedBy('test2'),
  },
});
",
  "import { Collection, PrimaryKeyProp, type Ref, defineEntity, p } from '@mikro-orm/core';
import { Car2 } from './Car2';
import { Sandwich } from './Sandwich';

export class User2 {
  [PrimaryKeyProp]?: ['firstName', 'lastName'];
  firstName!: string;
  lastName!: string;
  foo?: number | null;
  favouriteCar!: Ref<Car2> | null;
  cars = new Collection<Car2>(this);
  sandwiches = new Collection<Sandwich>(this);
}

export const User2Schema = defineEntity({
  class: User2,
  uniques: [
    {
      name: 'user2_favourite_car_name_favourite_car_year_unique',
      expression: 'create unique index [user2_favourite_car_name_favourite_car_year_unique] on [user2] (where ([favourite_car_name] IS NOT NULL AND [favourite_car_year] IS NOT NULL))',
      properties: ['favouriteCarName'],
    },
  ],
  properties: {
    firstName: p.string().primary().length(100),
    lastName: p.string().primary().length(100),
    foo: p.integer().nullable(),
    favouriteCar: () => p.oneToOne(Car2).ref().updateRule('cascade').deleteRule('set null').nullable(),
    cars: () => p.manyToMany(Car2).joinColumns('user2_first_name', 'user2_last_name').inverseJoinColumns('car2_name', 'car2_year'),
    sandwiches: () => p.manyToMany(Sandwich).joinColumns('user2_first_name', 'user2_last_name').inverseJoinColumn('sandwich_id'),
  },
});
",
]
`;
